584 ==> 401516 - Export to (Onedrive, Dropbox ...): list of subfolders not correctly displayed (problems if several subfolders have the same name).
585 ==> 401645 - digiKam crashes on possibly damaged video-file.
586 ==> 401676 - BQM resize tool : allow to resize by percentage (%).
587 ==> 401709 - Double clicking a name in a face-frame closes image preview.
588 ==> 401811 - DB migration (SQLite -> MySQL) fails if images are in trash.
589 ==> 401767 - digiKam unable to find existing path.
590 ==> 215486 - Collection not found in location on disk with UUID (LVM volume).
591 ==> 401834 - The "Scanning Faces" dialog box is too large and can't be resized in french language.
592 ==> 401664 - Trash shows list view only no thumbnails.
593 ==> 402029 - Find New Items process takes significantly longer to finish on 6.0.0.
594 ==> 402286 - Metadata settings don't display the combo value options.
595 ==> 402288 - The default Xmp.lr.hierarchicalSubject setting does not read darktable tags.
596 ==> 402300 - Template string in Help > About.
597 ==> 402283 - Duplicate entries drive to unpredictable performance.
598 ==> 402380 - Database schema upgrade to V10 is incomplete.
599 ==> 402379 - Moving location of RAW file causes loss of metadata.
600 ==> 366211 - When changing database, cannot open thumbnails into edit window.
601 ==> 402496 - digiKam crashed after a while during face recognition.
602 ==> 402726 - Piwigo export is missing.
603 ==> 401301 - digiKam Close crash.
604 ==> 401837 - Button Caption transcription error in french.
605 ==> 398880 - digiKam stays as a background process after closing.
606 ==> 398129 - ExpoBlend tool filename dialog shows previous file's name.
607 ==> 402556 - digikam-data conflict with dropbox installation.
608 ==> 402733 - Launch failure on MacOS with Digkam 6 beta3.
609 ==> 388705 - Unexpected crash on adding new items to the collection from an external application - 5.7.0 suse packages.
610 ==> 