@@ -677,4 +677,5 @@ BUGFIXES:
 607 ==> 402556 - digikam-data conflict with dropbox installation.
 608 ==> 402733 - Launch failure on MacOS with Digkam 6 beta3.
 609 ==> 388705 - Unexpected crash on adding new items to the collection from an external application - 5.7.0 suse packages.
-610 ==> 
+610 ==> 402800 - Main album view does not update when moving images between albums.
+611 ==> 
